<resources>
    <string name="app_name">MCB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="profile">Profile</string>
    <string name="my_parcels">My Parcels</string>
    <string name="my_profile">My Profile</string>
    <string name="my_trips">My Trips</string>
    <string name="my_trip">My Trips</string>
    <string name="my_receivings">My Receiving</string>
    <string name="my_wallet">My Wallet</string>
    <string name="wallet">My Wallet</string>
    <string name="my_account">Account</string>
    <string name="withdraw">My Withdraw</string>
    <string name="withdrawals">Withdrawals</string>
    <string name="withdraw_status">Withdraw Status</string>
    <string name="general">GENERAL</string>
    <string name="settings">Settings</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="welcome">Welcome</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="till_date">Till Date</string>
    <string name="trip_id">Trip ID</string>
    <string name="flight_details">Flight Details</string>
    <string name="arrival_colon">Arrival:</string>
    <string name="weight">Weight</string>
    <string name="view_all">View All</string>
    <string name="transporter_id">Transporter ID</string>
    <string name="action">Action</string>
    <string name="book_now">Book Now</string>
    <string name="booking_id">Booking id</string>
    <string name="sender_email_id">Sender Email Id</string>
    <string name="transporter_list">Transporter List</string>
    <string name="trip_details">Trip Details</string>
    <string name="where_send_your_parcel">Where do you want to send your parcel?</string>
    <string name="find_parcel_for_your_trip">Find a parcel for your Trip ?</string>
    <string name="enter_parcel_id">Parcel ID</string>
    <string name="select">SELECT</string>
    <string name="status">STATUS</string>
    <string name="login">LOGIN</string>
    <string name="status_small">Status</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="about">About</string>
    <string name="my">My</string>
    <string name="details_of">Details of</string>
    <string name="sender">Sender</string>
    <string name="parcels">Parcels</string>
    <string name="transporter">Transporter</string>
    <string name="trip">Trip</string>
    <string name="total">Total</string>
    <string name="receiver">Receiver</string>
    <string name="receiving">Receiving</string>
    <string name="receiver_id">Receiver ID</string>
    <string name="connect_with_faceboook">CONNECT WITH FACEBOOK</string>
    <string name="name">Name</string>
    <string name="member_id">Member ID</string>
    <string name="mcb_id">MCB ID</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="landline_number">Landlines Number</string>
    <string name="card_number">Card Number</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="current_balance">Current Balance</string>
    <string name="earned_amt">Earned Amt.</string>
    <string name="used_amt">Used Amt.</string>
    <string name="parcel_id">Parcel ID</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="ragister">Register</string>
    <string name="trasporter_details">Transporter\'s Details</string>
    <string name="receivers_details">Receiver\'s Details</string>
    <string name="receiver_details">Receiver Details</string>
    <string name="flight_no">Flight No.</string>
    <string name="departure">Departure</string>
    <string name="departure_date">Departure Date</string>
    <string name="arrival">Arrival</string>
    <string name="type">Type</string>
    <string name="select_from">Select From</string>
    <string name="select_to">Select To</string>
    <string name="parcel_type">Parcel Type</string>
    <string name="delivery_till">Delivery Till</string>
    <string name="size">Size</string>
    <string name="size_kg">Size(weight)</string>
    <string name="Parcel_description">Parcel Description</string>
    <string name="existing_user">Existing User</string>
    <string name="new_user">New User</string>
    <string name="email_address">Email Address</string>
    <string name="search">Search</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_parcel">Confirm Parcel</string>
    <string name="Receiver_info">Receiver Info</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_account_number">Bank Account No</string>
    <string name="transId">Transaction ID</string>
    <string name="amount">Amount</string>
    <string name="processing_date">Processing Date</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="payment_method">Payment Method</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="account_number">Account Number</string>
    <string name="reconfirm_account_number">Reconfirm Account Number</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="irsc_code">IRSC Code</string>
    <string name="swift">Swift</string>
    <string name="submit">Submit</string>
    <string name="recwiver_name">Receiver Name</string>
    <string name="recwiver_id">Receiver ID</string>
    <string name="trip_summary">Trip summary</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="become_a">Become a</string>
    <string name="find_a">Find a</string>
    <string name="active_parcels">Active parcels</string>
    <string name="add_parcels">Add parcel</string>
    <string name="pin_code">Pin Code</string>
    <string name="all_parcels">All parcels</string>
    <string name="message">Message</string>
    <string name="send_invite">Send Invite</string>
    <string name="active_trip">Active Trip</string>
    <string name="add_trip">Add Trip</string>
    <string name="update_trip">Update Trip</string>
    <string name="cancelled_trip">Cancelled Trip</string>
    <string name="pnr_booking_ref">PNR/Booking Ref</string>
    <string name="capacity">Capacity</string>
    <string name="parcel_idcreated">Parcel Created</string>
    <string name="created_payment_due">Payment Due</string>
    <string name="booking_with_tr">Booked with TR</string>
    <string name="parcel_collected">Parcel collected</string>
    <string name="parcel_delivered">Parcel Delivered</string>
    <string name="parcel_details">Parcel Details</string>
    <string name="list_of_parcels">List of Parcels</string>
    <string name="delivery_completed">Delivery Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="rejected_by_tr">Rejected by TR</string>
    <string name="parcel_received">Parcel Received</string>
    <string name="feedback">Feedback</string>
    <string name="pls_try_again">Please try again.</string>
    <string name="trip_unavailable">No Matching Transporter Found.</string>
    <string name="no_matching_transporter_found">No Matching Transporter Found</string>
    <string name="parcel_unavailable">No Parcel found.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_adrress">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pass_do_not_match_error_msg">Passwords do not match.</string>
    <string name="rs">&#x20B9;</string>
    <string name="update">Update</string>
    <string name="trip_update_successfully">Trip update successfully.</string>
    <string name="trip_add_successfully">Trip Add successfully.</string>
    <string name="box">Box</string>
    <string name="envelope">Envelope</string>
    <string name="parcel">Parcel</string>
    <string name="packet">Packet</string>
    <string name="filter_validation">Please enter at list one filter.</string>
    <string name="no_receiver_found">No receiver found.</string>
    <string name="can_not_be_empty">Can\'t be empty</string>
    <string name="payment">Payment</string>
    <string name="no_trans_found">No Transporter found.</string>
    <string name="parcel_id_created">Parcel ID Created</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="booking_request_sent">Request Sent</string>
    <string name="booked">Booked</string>
    <string name="booked_parcels">Booked Parcels</string>
    <string name="rejected">Rejected</string>
    <string name="delivered">Delivered</string>
    <string name="complete">Complete</string>
    <string name="completed">Completed</string>
    <string name="on_hold">On hold</string>
    <string name="departure_date_can_not_empty">Departure date can\'t be empty.</string>
    <string name="departure_time_can_not_empty">Departure time can\'t be empty.</string>
    <string name="arrival_date_can_not_empty">Arrival date can\'t be empty.</string>
    <string name="arrival_time_can_not_empty">Arrival time can\'t be empty.</string>
    <string name="trip_add_success">Trip Created Successfully Sent for admin Approval.</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="ticked_uploaded">Ticket Uploaded</string>
    <string name="time">Time</string>
    <string name="user_authorization_on_add_parcel">Please verify your email before adding Parcel !</string>
    <string name="height">Height</string>
    <string name="height_cm">Height(cm)</string>
    <string name="width">Width</string>
    <string name="width_cm">Width(cm)</string>
    <string name="length_cm">Length(cm)</string>
    <string name="length">Length</string>
    <string name="max_weight">Max  %1$s  %2$s.</string>
    <string name="find">Find</string>
    <string name="remaining_capacity">(Remaining Capacity: %1$s kg)</string>
    <string name="collected">Collected</string>
    <string name="no_pending_request_available">No Pending Requests Available</string>
    <string name="use_mcb_available_amount">Use MCB Wallet. Available Amount(\u20B9)</string>
    <string name="pay_now">PayNow</string>
    <string name="amount_to_pay">Amount To Pay</string>
    <string name="parcel_create_successfully">Parcel create successfully.</string>
    <string name="parcel_update_successfully">Parcel update successfully.</string>
    <string name="reason_cancel_trip">Do you want to cancel this Trip? Give Reason.</string>
    <string name="valid_trip_reason">Please give valid reason for cancel trip!</string>
    <string name="update_mobile">Please Update your mobile number!</string>
    <string name="email_error_msg">Please enter valid email Id.</string>
    <string name="please_enter_pin_code">Please enter pin code.</string>
    <string name="do_you_want_to_delete_parcel">Do you want to delete parcel ?</string>
    <string name="fully_booked">Fully Booked</string>
    <string name="matching_parcels">Matching Parcels</string>
    <string name="matching_trips">Matching Trips</string>
    <string name="create_request">Create Request</string>
    <string name="make_payment">Make Payment</string>
    <string name="totalTrips">Total Trips : %1$s</string>
    <string name="wallet_grater_than_50">Your wallet amount must be grater than 50 &#x20B9;</string>
</resources>