<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_trip_pending"
        android:title="@string/pending" />

    <item
        android:id="@+id/action_trip_approved"
        android:title="@string/approved" />

    <item
        android:id="@+id/action_trip_booking_request_sent"
        android:title="@string/booking_request_sent" />

    <item
        android:id="@+id/action_trip_booked"
        android:title="@string/booked" />

    <item
        android:id="@+id/action_trip_rejected"
        android:title="@string/rejected" />
    <item
        android:id="@+id/action_trip_delivered"
        android:title="@string/delivered" />

    <item
        android:id="@+id/action_trip_complete"
        android:title="@string/complete" />

    <item
        android:id="@+id/action_trip_on_hold"
        android:title="@string/on_hold" />

</menu>
