<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_6"
        android:layout_marginTop="@dimen/dim_6"
        android:text="@string/Receiver_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_bg"
        android:orientation="vertical"
        android:padding="@dimen/dim_8">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dim_12"
            android:paddingRight="@dimen/dim_12"
            android:weightSum="2">

            <TextView
                android:id="@+id/txtExistingReceiverAddParcel"
                style="@style/text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rect_left_corners_pink_border_grey_bg"
                android:gravity="center"
                android:padding="@dimen/dim_8"
                android:text="@string/existing_user"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/txtNewReceiverAddParcel"
                style="@style/text_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rect_right_corners_pink_bg"
                android:gravity="center"
                android:padding="@dimen/dim_8"
                android:text="@string/new_user"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_4"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/dark_grey">

                    <EditText
                        style="@style/editxt_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/dark_grey"
                        android:hint="@string/name"
                        android:textColorHint="@color/dark_grey" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/dark_grey">

                    <EditText
                        style="@style/editxt_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/dark_grey"
                        android:hint="@string/email_address"
                        android:textColorHint="@color/dark_grey" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_4"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/dark_grey">

                    <EditText
                        style="@style/editxt_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/dark_grey"
                        android:hint="@string/mobile_number"
                        android:textColorHint="@color/dark_grey" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/dark_grey">

                    <EditText
                        style="@style/editxt_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/dark_grey"
                        android:hint="@string/message"
                        android:textColorHint="@color/dark_grey" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dim_8"
        android:gravity="center"
        android:weightSum="3">

        <TextView
            style="@style/button_blue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/send_invite" />
    </LinearLayout>

</LinearLayout>
