<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_margin="@dimen/dim_10"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_white_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCameraAttachment"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/camera"
            android:textColor="@color/primary_blue"
            android:textSize="@dimen/text_large_16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#30888888" />

        <TextView
            android:id="@+id/txtAttachmentsDialog"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:gravity="center"
            android:text="@string/gallery"
            android:textColor="@color/primary_blue"
            android:textSize="@dimen/text_large_16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtCancelAttachments"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_corner_white_bg"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/primary_blue"
        android:textSize="@dimen/text_large_16sp"
        android:textStyle="bold" />

</LinearLayout>